--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <img src="https://cdn-images-1.medium.com/max/1600/1*8FkvzbSdSJ4HNxtuZo5kLg.jpeg">
                 <h2>Artist</h2>
             </li>
+            <li>
+                <h2>Album name</h2>
+                <img src="https://cdn-images-1.medium.com/max/1600/1*8FkvzbSdSJ4HNxtuZo5kLg.jpeg">
+                <h2>Artist</h2>
+            </li>
         </ul>
     </main>
 <script type="module" src="./src/index.js"></script>
